🔧 Fix ide overflow

--- a/server/src/screen/src/App/App.module.scss
+++ b/server/src/screen/src/App/App.module.scss
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: calc(100% - 48px);
 
     :global(.CodeMirror) {
         flex: 1;
@@ -66,7 +67,8 @@
 
     .terminal {
         font-family: Menlo, Monaco, 'Courier New', monospace;
-        white-space: pre;
+        white-space: pre-wrap;
+        word-break: break-all;
         overflow-y: scroll;
         height: 200px;
         padding: 8px;
